--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,38 @@
 header,
 main,
 footer {
-    background-color: rgb(120,120,120)
+    background-color: rgb(145, 145, 145);
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 body {
     width: 100%;
 	max-width: 1024px;
-	margin: 0 auto;
-	background-color: rgb(143, 150, 255);
-	font-size: 100%;
+	margin: auto;
+	background-color: rgb(63, 63, 63);
+    font-size: 130%;
+    
+}
+
+h2 li {
+    text-align: center;
 }
 
 img {
     width:400px;
     height:400px;
+    display: block;
+    margin: 0 auto;
 }
 
-figure {
-
-}
 .imgp {
-    float:left;
+    margin: auto;
 
 }
 
-#id {
-
+#header {
+    text-align: center;
 }
